Se realizaron correcciones a sprint1

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 
         <button id="button">Iniciar sesión</button>
     </form>
+    <!-- <script src="./js/main.js"></script> -->
     <script src="./js/main.js"></script>
-    <a href="./administrador.html"></a>
-    <a href="./clientes.html"></a>
 </body>
 
 </html>
